.deploy/Client.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-app
  labels:
    app: client-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-app
  template:
    metadata:
      labels:
        app: client-app
    spec:
      containers:
        - name: client-app
          image: abychkov117/client-app:1.5
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: client-app-service
spec:
  selector:
    app: client-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
